CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME WeSocket)

MESSAGE (STATUS "*** Staging to build ${PACKAGE_NAME} ***")
PROJECT(${PACKAGE_NAME})

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/include
	${PROJECT_SOURCE_DIR}/src
)

LINK_DIRECTORIES(
	${PROJECT_BINARY_DIR}/bin
	${PROJECT_BINARY_DIR}/lib
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

FILE(GLOB_RECURSE WESOCKET_INC "include/*.h" "include/*.hpp")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
