PROJECT(WeSocket)

INCLUDE_DIRECTORIES(
	${PROJECT_SOURCE_DIR}/src
)

#LINK_DIRECTORIES(
#	${PROJECT_BINARY_DIR}/lib
#)
#aux_source_directory(${PROJECT_SOURCE_DIR}/include WESOCKET_INC)

SET(WESOCKET_SRC
	socket.cpp
)

ADD_LIBRARY(WeSocket SHARED ${WESOCKET_SRC} ${WESOCKET_INC})


ADD_LIBRARY(WeSocket_static STATIC ${WESOCKET_SRC} ${WESOCKET_INC})
SET_TARGET_PROPERTIES(WeSocket_static PROPERTIES OUTPUT_NAME "WeSocket")
SET_TARGET_PROPERTIES(WeSocket PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(WeSocket_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)


#ADD_EXECUTABLE(mytest mytest.cxx)
#TARGET_LINK_LIBRARIES(mytest ttiger)