#PROJECT(test)
SET(TEST_SRC
	test.cpp
)

ADD_EXECUTABLE(test0 ${TEST_SRC})
TARGET_LINK_LIBRARIES(test0 WeSocket)
#TARGET_LINK_LIBRARIES(test0 "${CMAKE_CFG_INTDIR}/WeSocket.lib")
#include_directories(test)
#LINK_DIRECTORIES("${CMAKE_BINARY_DIR}")
#TARGET_LINK_LIBRARIES(test0 "${PROJECT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/${PACKAGE_NAME}.lib")

#SET(LIBRARY_OUTPUT_DIRECTOR ${CMAKE_CFG_INTDIR})
